--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-<head>
-<title>amame04</title>
-</head>
-<body>
-<h1>HelloWorld</h1>
-</body>
+  <head>
+    <title>amame04</title>
+  </head>
+  <body>
+    <h1>amame04</h1>
+    <a href="https://github.com/">github</a>
+  </body>
 </html>
