--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>amame04</h1>
-    <a href="https://github.com/">github</a>
+    <a href="https://github.com/amame04">github</a>
   </body>
 </html>
