--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
     body {
       letter-spacing: 1.0em;
       background-color: #555;
-      margin-top: 3.0em;
+      padding-top: 3.0em;
       font-family: 'Press Start 2P', cursive;
       letter-spacing: 0.02em;
       color: #eee;
     }
-    h1 {
-      font-size: 5.0em;
-    }
     ul {
       list-style: none;
+      padding: 0;
+      margin: 0;
     }
     a {
       color: #ccc;
@@ -37,11 +36,14 @@
     li {
       padding-top: 2em;
     }
+
     li :hover, a :hover{
-      color: #fff;
+      transition: 1.0s;
+      background-color: #aaa;
+      color: #333;
       text-decoration: none;
-      font-size: 1.5em;
     }
+
   </style>
 
   <body class="text-center center-block">
