--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
     }
 
     li :hover, a :hover{
-      transition: 1.0s;
-      background-color: #aaa;
-      color: #333;
-      text-decoration: none;
+      transition: 0.6s;
+      color: #fff;
+      text-decoration: border;
     }
 
   </style>
