--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ja">
   <head>
-    <!-- Required meta tags -->
+    <!-- Meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -24,15 +24,18 @@
       letter-spacing: 0.02em;
       color: #eee;
     }
+
     ul {
       list-style: none;
       padding: 0;
       margin: 0;
     }
+
     a {
       color: #ccc;
       display: block;
     }
+
     li {
       padding-top: 2em;
     }
@@ -42,7 +45,6 @@
       color: #fff;
       text-decoration: border;
     }
-
   </style>
 
   <body class="text-center center-block">
@@ -52,11 +54,16 @@
       <li><a href="https://twitter.com/amame04">Twitter</a></li>
       <li><a href="https://amame.hateblo.jp/">Blog</a></li>
     </ul>
+    <!--
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+  _______   _       ____           ____             __                           ___    _     _       __                            _      ___             __           _     ____           ____          _     __                   _ 
+ |__   __| | |     |___ \         |___ \           /_ |                         / _ \  | |   | |     /_ |                          | |    / _ \           /_ |         | |   |___ \         |___ \        | |   /_ |                 | |
+    | |    | |__     __) |  _ __    __) |           | |  ___            _ __   | | | | | |_  | |__    | |  _ __     __ _           | |_  | | | |           | |  _ __   | |_    __) |  _ __    __) |  ___  | |_   | |  _ __     __ _  | |
+    | |    | '_ \   |__ <  | '__|  |__ <            | | / __|          | '_ \  | | | | | __| | '_ \   | | | '_ \   / _` |          | __| | | | |           | | | '_ \  | __|  |__ <  | '__|  |__ <  / __| | __|  | | | '_ \   / _` | | |
+    | |    | | | |  ___) | | |     ___) |           | | \__ \          | | | | | |_| | | |_  | | | |  | | | | | | | (_| |          | |_  | |_| |           | | | | | | | |_   ___) | | |     ___) | \__ \ | |_   | | | | | | | (_| | |_|
+    |_|    |_| |_| |____/  |_|    |____/            |_| |___/          |_| |_|  \___/   \__| |_| |_|  |_| |_| |_|  \__, |           \__|  \___/            |_| |_| |_|  \__| |____/  |_|    |____/  |___/  \__|  |_| |_| |_|  \__, | (_)
+                                           ______              ______                                               __/ |  ______                 ______                                                                       __/ |    
+                                          |______|            |______|                                             |___/  |______|               |______|                                                                     |___/     
+    -->
   </body>
 </html>
