--- a/index.html
+++ b/index.html
@@ -6,49 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <title>amame04</title>
+    <style> 
+      body {
+        margin: auto;
+        text-align: center;
+        letter-spacing: 0.02em;
+        background-color: #555;
+        padding-top: 3.0em;
+        font-family: 'Press Start 2P', cursive;
+        color: #eee;
+      }
+
+      ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+
+      a {
+        color: #ccc;
+        display: block;
+        text-decoration: none;
+      }
+
+      li {
+        padding-top: 2em;
+        text-decoration: none;
+      }
+
+      a:hover {
+        transition: 0.6s;
+        color: #fff;
+        text-decoration: underline;
+      }
+    </style>
   </head>
-  <style> 
-    body {
-      letter-spacing: 1.0em;
-      background-color: #555;
-      padding-top: 3.0em;
-      font-family: 'Press Start 2P', cursive;
-      letter-spacing: 0.02em;
-      color: #eee;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    a {
-      color: #ccc;
-      display: block;
-    }
-
-    li {
-      padding-top: 2em;
-    }
-
-    li :hover, a :hover{
-      transition: 0.6s;
-      color: #fff;
-      text-decoration: border;
-    }
-  </style>
-
-  <body class="text-center center-block">
+  <body>
     <h1>amame04</h1>
     <ul>
       <li><a href="https://github.com/amame04">GitHub</a></li>
