--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1>amame04</h1>
     <ul>
       <li><a href="https://github.com/amame04">GitHub</a></li>
-      <li><a href="https://twitter.com/amame04">Twitter</a></li>
+      <li><a href="https://twitter.com/amame04">Twitter(X)</a></li>
       <li><a href="https://amame.hateblo.jp/">Blog</a></li>
     </ul>
     <!--
