--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
     <h1>amame04</h1>
     <ul>
       <li><a href="https://github.com/amame04">GitHub</a></li>
-      <li><a href="https://twitter.com/amame04">Twitter(X)</a></li>
-      <li><a href="https://amame.hateblo.jp/">Blog</a></li>
+      <li><a href="https://a44a.me/tizuguessr/">Tizuguessr</a></li>
+      <li><a href="https://bsky.app/profile/a44ame.bsky.social">Bluesky</a></li>
+      <li><a href="https://twitter.com/amame04"><s>Twitter(X)</s></a></li>
+      <li><a href="https://amame.hateblo.jp/"><s>Blog</s></a></li>
     </ul>
   </body>
 </html>
