--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   <body>
     <h1>amame04</h1>
     <ul>
+      <li><a href="./photo.html">Photography</a></li>
       <li><a href="https://github.com/amame04">GitHub</a></li>
       <li><a href="https://a44a.me/tizuguessr/">Tizuguessr</a></li>
       <li><a href="https://bsky.app/profile/a44ame.bsky.social">Bluesky</a></li>
